[project]
name = "eco-cycle-prep"
version = "0.1.0"
description = "End-to-end tooling for preparing an Eco cycle: source sync, community-intel digests, map-gen rolls, mod sync, and go-live announcements."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "invoke>=2.2",
    "boto3>=1.34",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eco_cycle_prep"]
